--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "quickchart-js": "^3.1.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+	"jsonwebtoken": "^9.0.1",
+	"@types/jsonwebtoken": "^9.0.2"
   }
 }
