Implement clan win feeds

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "token": "<INSERT TOKEN HERE>",
   "unbelieva_app_id": "<INSERT APP ID HERE>",
   "unbelieva_bot_token": "<INSERT TOKEN HERE>",
-  "endpoint_self": "http://localhost:34583/"
+  "endpoint_self": "http://localhost:34583/",
+  "wss_secret": "<INSERT SECRET HERE>"
 }
