Implement graph commands

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "unbelieva_app_id": "<INSERT APP ID HERE>",
   "unbelieva_bot_token": "<INSERT TOKEN HERE>",
   "endpoint_self": "http://localhost:34583/",
+  "bettertt_api_url": "<INSERT API URL HERE>",
   "wss_secret": "<INSERT SECRET HERE>"
 }
