--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "unbelieva_bot_token": "<INSERT TOKEN HERE>",
   "endpoint_self": "http://localhost:34583/",
   "bettertt_api_url": "<INSERT API URL HERE>",
-  "wss_secret": "<INSERT SECRET HERE>"
+  "wss_secret": "<INSERT SECRET HERE>",
+  "bot_owner": "<INSERT OWNER ID HERE>"
 }
